--- a/Classification/Loan_Default_Prediction/Project_01/01_Data_Load_EDA.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/01_Data_Load_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "id": "17d24c94",
    "metadata": {},
    "outputs": [],
@@ -28,46 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "ddf36397",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: kaggle in /usr/local/lib/python3.12/dist-packages (1.7.4.5)\n",
-      "Requirement already satisfied: ipeadatapy in /usr/local/lib/python3.12/dist-packages (0.1.9)\n",
-      "Requirement already satisfied: bleach in /usr/local/lib/python3.12/dist-packages (from kaggle) (6.3.0)\n",
-      "Requirement already satisfied: certifi>=14.05.14 in /usr/local/lib/python3.12/dist-packages (from kaggle) (2025.10.5)\n",
-      "Requirement already satisfied: charset-normalizer in /usr/local/lib/python3.12/dist-packages (from kaggle) (3.4.4)\n",
-      "Requirement already satisfied: idna in /usr/local/lib/python3.12/dist-packages (from kaggle) (3.11)\n",
-      "Requirement already satisfied: protobuf in /usr/local/lib/python3.12/dist-packages (from kaggle) (5.29.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.3 in /usr/local/lib/python3.12/dist-packages (from kaggle) (2.9.0.post0)\n",
-      "Requirement already satisfied: python-slugify in /usr/local/lib/python3.12/dist-packages (from kaggle) (8.0.4)\n",
-      "Requirement already satisfied: requests in /usr/local/lib/python3.12/dist-packages (from kaggle) (2.32.4)\n",
-      "Requirement already satisfied: setuptools>=21.0.0 in /usr/local/lib/python3.12/dist-packages (from kaggle) (75.2.0)\n",
-      "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.12/dist-packages (from kaggle) (1.17.0)\n",
-      "Requirement already satisfied: text-unidecode in /usr/local/lib/python3.12/dist-packages (from kaggle) (1.3)\n",
-      "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from kaggle) (4.67.1)\n",
-      "Requirement already satisfied: urllib3>=1.15.1 in /usr/local/lib/python3.12/dist-packages (from kaggle) (2.5.0)\n",
-      "Requirement already satisfied: webencodings in /usr/local/lib/python3.12/dist-packages (from kaggle) (0.5.1)\n",
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (from ipeadatapy) (2.2.2)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in /usr/local/lib/python3.12/dist-packages (from pandas->ipeadatapy) (2.0.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas->ipeadatapy) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas->ipeadatapy) (2025.2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install Kaggle and Ipeadata libraries if they haven't been installed in this session\n",
     "# Uncomment the line below if running in a fresh environment\n",
-    "%pip install kaggle ipeadatapy"
+    "#%pip install kaggle ipeadatapy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "ec80a71b",
    "metadata": {},
    "outputs": [],
@@ -77,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "8105a227",
    "metadata": {},
    "outputs": [],
@@ -104,7 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
+   "id": "3dd69fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To download kaggle data via API it is necessary to configure your Token in kaggle profile. \n",
+    "# After configuring your credentials run the code below in the terminal\n",
+    "\n",
+    "#mkdir -p ~/.kaggle\n",
+    "## CRITICAL: Replace the entire string below with your key content\n",
+    "#echo '{\"username\":\"YOUR_USERNAME\",\"key\":\"YOUR_LONG_API_KEY\"}' > ~/.kaggle/kaggle.json\n",
+    "#chmod 600 ~/.kaggle/kaggle.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "fc3a870b",
    "metadata": {},
    "outputs": [
@@ -114,23 +103,19 @@
      "text": [
       "Directories created/checked: /content/drive/MyDrive/Project_01/data/raw/kaggle\n",
       "Attempting to download competition dataset: home-credit-default-risk\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/bin/kaggle\", line 4, in <module>\n",
-      "    from kaggle.cli import main\n",
-      "  File \"/usr/local/lib/python3.12/dist-packages/kaggle/__init__.py\", line 6, in <module>\n",
-      "    api.authenticate()\n",
-      "  File \"/usr/local/lib/python3.12/dist-packages/kaggle/api/kaggle_api_extended.py\", line 434, in authenticate\n",
-      "    raise IOError('Could not find {}. Make sure it\\'s located in'\n",
-      "OSError: Could not find kaggle.json. Make sure it's located in /root/.config/kaggle. Or use the environment method. See setup instructions at https://github.com/Kaggle/kaggle-api/\n",
+      "Downloading home-credit-default-risk.zip to /content/drive/MyDrive/Project_01/data/raw/kaggle\n",
+      " 99% 678M/688M [00:05<00:00, 127MB/s] \n",
+      "100% 688M/688M [00:05<00:00, 138MB/s]\n",
       "✅ Kaggle download command executed.\n",
       "\n",
       "Unzipping data from: /content/drive/MyDrive/Project_01/data/raw/kaggle/home-credit-default-risk.zip\n",
-      "❌ ERROR: Zip file not found at /content/drive/MyDrive/Project_01/data/raw/kaggle/home-credit-default-risk.zip. This means the download failed. Check API key/rules acceptance.\n"
+      "✅ Data unzipped to: /content/drive/MyDrive/Project_01/data/raw/kaggle/home-credit-default-risk\n",
+      "Zip file removed.\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "DRIVE_BASE_PATH = '/content/drive/MyDrive/Project_01'\n",
     "\n",
     "# CRITICAL CORRECTION: Use the competition slug and command\n",
     "KAGGLE_COMPETITION_SLUG = 'home-credit-default-risk' \n",
@@ -184,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "33e94eac",
    "metadata": {},
    "outputs": [
@@ -202,7 +187,7 @@
     "# Generate and Save Placeholder CSV\n",
     "\n",
     "# 1. Define the directory path (ensure the folder exists in your Google Drive)\n",
-    "DRIVE_BASE_PATH = '/content/drive/MyDrive/Project_01'\n",
+    "\n",
     "MACRO_DATA_PATH = os.path.join(DRIVE_BASE_PATH, 'brasil_macro_data.csv')\n",
     "\n",
     "# 2. Create the directory\n",
@@ -227,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "e09c95e5",
    "metadata": {},
    "outputs": [],
@@ -238,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "e9c435ca",
    "metadata": {},
    "outputs": [],
@@ -272,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "ec39c10d",
    "metadata": {},
    "outputs": [],
@@ -335,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "b8bac1be",
    "metadata": {},
    "outputs": [
@@ -344,13 +329,12 @@
      "output_type": "stream",
      "text": [
       "Acquiring SELIC data...\n",
-      "Starting pagination for series 432. Total range: 01/01/2015 to 01/11/2025\n",
+      "Starting pagination for series 432. Total range: 01/01/2014 to 01/11/2025\n",
       "  -> Querying chunk: 01/11/2015 to 01/11/2025\n",
-      "❌ Error querying BCB series 432 from 01/11/2015 to 01/11/2025: Expected object or value\n",
-      "  -> Querying chunk: 01/01/2015 to 31/10/2015\n",
-      "Pagination successful. Total data points: 304\n",
+      "  -> Querying chunk: 01/01/2014 to 31/10/2015\n",
+      "Pagination successful. Total data points: 4323\n",
       "✅ SELIC Data acquired and paginated successfully.\n",
-      "SELIC rows after resampling: 10\n"
+      "SELIC rows after resampling: 143\n"
      ]
     }
    ],
@@ -359,7 +343,7 @@
     "\n",
     "# --- USER INPUT ---\n",
     "# Define the global start and end date for the macro data acquisition (DD/MM/YYYY format)\n",
-    "GLOBAL_START_DATE_STR = '01/01/2015' \n",
+    "GLOBAL_START_DATE_STR = '01/01/2014' \n",
     "GLOBAL_END_DATE_STR = '01/11/2025'   \n",
     "# ------------------\n",
     "\n",
@@ -384,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "id": "3014a601",
    "metadata": {},
    "outputs": [
@@ -394,10 +378,10 @@
      "text": [
       "\n",
       "Acquiring IPCA data...\n",
-      "Starting pagination for series 433. Total range: 01/01/2015 to 01/11/2025\n",
+      "Starting pagination for series 433. Total range: 01/01/2014 to 01/11/2025\n",
       "  -> Querying chunk: 01/11/2015 to 01/11/2025\n",
-      "  -> Querying chunk: 01/01/2015 to 31/10/2015\n",
-      "Pagination successful. Total data points: 130\n",
+      "  -> Querying chunk: 01/01/2014 to 31/10/2015\n",
+      "Pagination successful. Total data points: 142\n",
       "✅ IPCA Data acquired successfully.\n"
      ]
     }
@@ -425,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "id": "fdd9dad3",
    "metadata": {},
    "outputs": [
@@ -437,12 +421,12 @@
       "✅ Final Macro Data Merged and Saved:\n",
       "         IPCA  SELIC\n",
       "date                \n",
-      "2015-01  1.24  12.25\n",
-      "2015-02  1.22  12.25\n",
-      "2015-03  1.32  12.75\n",
-      "2015-04  0.71  13.25\n",
-      "2015-05  0.74  13.25\n",
-      "Macro Data Shape: (130, 2)\n"
+      "2014-01  0.55  10.50\n",
+      "2014-02  0.69  10.75\n",
+      "2014-03  0.92  10.75\n",
+      "2014-04  0.67  11.00\n",
+      "2014-05  0.46  11.00\n",
+      "Macro Data Shape: (143, 2)\n"
      ]
     }
    ],
@@ -472,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "id": "73d81d15",
    "metadata": {},
    "outputs": [
@@ -483,11 +467,11 @@
       "Attempting to load Micro Data from: /content/drive/MyDrive/Project_01/data/raw/kaggle/home-credit-default-risk/application_train.csv\n",
       "✅ Micro Data loaded and Time Index simulated successfully.\n",
       "   SK_ID_CURR  TARGET TIME_INDEX\n",
-      "0      100002       1    2017-01\n",
-      "1      100003       0    2014-12\n",
-      "2      100004       0    2014-04\n",
-      "3      100006       0    2018-02\n",
-      "4      100007       0    2016-05\n",
+      "0      100002       1    2018-02\n",
+      "1      100003       0    2013-09\n",
+      "2      100004       0    2016-03\n",
+      "3      100006       0    2017-08\n",
+      "4      100007       0    2017-10\n",
       "\n",
       "Micro Data Shape: (307511, 123)\n"
      ]
@@ -541,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "id": "e6f21511",
    "metadata": {},
    "outputs": [
@@ -553,13 +537,13 @@
       "✅ Macro Data loaded and Time Index prepared successfully.\n",
       "            IPCA  SELIC\n",
       "TIME_INDEX             \n",
-      "2015-01     1.24  12.25\n",
-      "2015-02     1.22  12.25\n",
-      "2015-03     1.32  12.75\n",
-      "2015-04     0.71  13.25\n",
-      "2015-05     0.74  13.25\n",
+      "2014-01     0.55  10.50\n",
+      "2014-02     0.69  10.75\n",
+      "2014-03     0.92  10.75\n",
+      "2014-04     0.67  11.00\n",
+      "2014-05     0.46  11.00\n",
       "\n",
-      "Macro Data Shape: (130, 2)\n"
+      "Macro Data Shape: (143, 2)\n"
      ]
     }
    ],
@@ -613,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "id": "f0beee99",
    "metadata": {},
    "outputs": [
@@ -621,16 +605,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting merge of micro (df_train) and macro (df_macro) data...\n",
+      "Starting merge of micro (df_train) and macro (df_macro) data...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ Datasets merged successfully.\n",
       "\n",
       "Enriched Data Sample (with new macro features):\n",
       "   SK_ID_CURR  TARGET TIME_INDEX  IPCA  SELIC\n",
-      "0      100002       1    2017-01  0.38  14.25\n",
-      "1      100003       0    2014-12   NaN    NaN\n",
-      "2      100004       0    2014-04   NaN    NaN\n",
-      "3      100006       0    2018-02  0.32  14.25\n",
-      "4      100007       0    2016-05  0.78  14.25\n",
+      "0      100002       1    2018-02  0.32   6.75\n",
+      "1      100003       0    2013-09   NaN    NaN\n",
+      "2      100004       0    2016-03  0.43  14.25\n",
+      "3      100006       0    2017-08  0.19   9.25\n",
+      "4      100007       0    2017-10  0.42   7.50\n",
       "\n",
       "Final Enriched Shape: (307511, 125)\n"
      ]
