--- a/Classification/Loan_Default_Prediction/Project_01/src/01_Data_Load_EDA.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/src/01_Data_Load_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "17d24c94",
    "metadata": {},
    "outputs": [],
@@ -23,8 +23,7 @@
     "import random\n",
     "from datetime import datetime, timedelta\n",
     "from dateutil.relativedelta import relativedelta\n",
-    "import ipeadatapy as ip\n",
-    "from sklearn.impute import KNNImputer"
+    "import ipeadatapy as ip"
    ]
   },
   {
