--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/Feature_Eng.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/Feature_Eng.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "68db1350",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
     "    # --- LOAD TRAIN DATA USING CONFIG PATHS ---\n",
     "    df_train_final = pd.read_csv(cfg.TRAIN_PROCESSED_FILE)\n",
     "    \n",
-    "    # CORREÇÃO ESSENCIAL: Garante que TIME_INDEX seja do tipo temporal após carregar do CSV\n",
+    "    # ESSENTIAL FIX: Ensures TIME_INDEX is of temporal type after loading from CSV\n",
     "    df_train_final['TIME_INDEX'] = pd.to_datetime(df_train_final['TIME_INDEX'])\n",
     "    \n",
     "    print(f\"✅ Loaded final training data. Shape: {df_train_final.shape}\")\n",
@@ -116,23 +116,20 @@
     "    # --- LOAD TEST DATA USING CONFIG PATHS ---\n",
     "    df_test_final = pd.read_csv(cfg.TEST_PROCESSED_FILE)\n",
     "    \n",
-    "    # Aplica a mesma conversão temporal ao Test Set\n",
+    "    # Apply the same temporal conversion to the Test Set\n",
     "    df_test_final['TIME_INDEX'] = pd.to_datetime(df_test_final['TIME_INDEX'])\n",
     "    \n",
     "    print(f\"✅ Loaded final testing data. Shape: {df_test_final.shape}\")\n",
-    "\n",
     "except FileNotFoundError:\n",
     "    print(f\"❌ ERROR: Final processed file not found. Check if Block 9 was run and files exist at: {path.DATA_PROCESSED_DIR}\")\n",
     "    df_train_final = None\n",
     "    df_test_final = None\n",
-    "\n",
-    "\n",
     "if df_train_final is not None and df_test_final is not None:\n",
     "    print(\"--- Starting Feature Engineering ---\")\n",
     "    \n",
     "    # --- 1. Create Lagged and Dynamic Macro Features (TRAIN SET) ---\n",
     "    \n",
-    "    # Correção do KeyError/SetIndex: Garante que TIME_INDEX seja uma coluna regular antes de setar\n",
+    "    # KeyError/SetIndex Fix: Ensures TIME_INDEX is a regular column before setting\n",
     "    if 'TIME_INDEX' not in df_train_final.columns and 'TIME_INDEX' in df_train_final.index.names:\n",
     "        df_train_final = df_train_final.reset_index(level='TIME_INDEX')\n",
     "        print(\"💡 TRAIN: TIME_INDEX restored from index to column.\")\n",
@@ -140,7 +137,7 @@
     "    # Temporarily set TIME_INDEX as the index for time-series operations\n",
     "    df_train_final = df_train_final.set_index('TIME_INDEX')\n",
     "    \n",
-    "    # Usar os nomes de coluna corretos\n",
+    "    # Use the correct column names\n",
     "    macro_features_to_engineer = ['SELIC', 'IPCA'] \n",
     "    \n",
     "    for col in macro_features_to_engineer:\n",
@@ -159,7 +156,7 @@
     "\n",
     "    # --- 2. Temporal Features from TIME_INDEX (TRAIN SET) ---\n",
     "    \n",
-    "    # Extrair mês e ano usando o índice já definido\n",
+    "    # Extract month and year using the already defined index\n",
     "    df_train_final['MONTH_OF_YEAR'] = df_train_final.index.to_series().dt.month\n",
     "    df_train_final['YEAR'] = df_train_final.index.to_series().dt.year\n",
     "    \n",
@@ -172,10 +169,10 @@
     "    \n",
     "    \n",
     "    # --------------------------------------------------------------------------------\n",
-    "    # --- REPETIR PARA TEST SET ---\n",
+    "    # --- REPEAT FOR TEST SET ---\n",
     "    # --------------------------------------------------------------------------------\n",
     "    \n",
-    "    # Correção do KeyError/SetIndex para o Test Set\n",
+    "    # KeyError/SetIndex Fix for the Test Set\n",
     "    if 'TIME_INDEX' not in df_test_final.columns and 'TIME_INDEX' in df_test_final.index.names:\n",
     "        df_test_final = df_test_final.reset_index(level='TIME_INDEX')\n",
     "        print(\"💡 TEST: TIME_INDEX restored from index to column.\")\n",
