--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/Feature_Eng.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/Feature_Eng.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "92cf6fa0",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
     "    \n",
     "    print(f\"✅ Loaded final testing data. Shape: {df_test_final.shape}\")\n",
     "except FileNotFoundError:\n",
-    "    print(f\"❌ ERROR: Final processed file not found. Check if Block 9 was run and files exist at: {path.DATA_PROCESSED_DIR}\")\n",
+    "    print(f\"❌ ERROR: Final processed file not found. Check if Block 9 was run and files exist at: {cfg.DATA_PROCESSED_DIR}\")\n",
     "    df_train_final = None\n",
     "    df_test_final = None\n",
     "if df_train_final is not None and df_test_final is not None:\n",
@@ -356,6 +356,14 @@
     "\n",
     "print(f\"Total number of features after encoding: {df_train_final.shape[1]}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2caf6690",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
