--- a/Classification/Loan_Default_Prediction/Project_01/notebooks/Feature_Eng.ipynb
+++ b/Classification/Loan_Default_Prediction/Project_01/notebooks/Feature_Eng.ipynb
@@ -8,10 +8,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "id": "2692ba17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: category_encoders in /usr/local/lib/python3.12/dist-packages (2.9.0)\n",
+      "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (2.0.2)\n",
+      "Requirement already satisfied: pandas>=1.0.5 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (2.2.2)\n",
+      "Requirement already satisfied: patsy>=0.5.1 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (1.0.2)\n",
+      "Requirement already satisfied: scikit-learn>=1.6.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (1.6.1)\n",
+      "Requirement already satisfied: scipy>=1.0.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (1.16.3)\n",
+      "Requirement already satisfied: statsmodels>=0.9.0 in /usr/local/lib/python3.12/dist-packages (from category_encoders) (0.14.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.0.5->category_encoders) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.0.5->category_encoders) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas>=1.0.5->category_encoders) (2025.2)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=1.6.0->category_encoders) (1.5.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=1.6.0->category_encoders) (3.6.0)\n",
+      "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.12/dist-packages (from statsmodels>=0.9.0->category_encoders) (25.0)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.5->category_encoders) (1.17.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install category_encoders if not already installed in the environment\n",
+    "!pip install category_encoders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "29d0b647",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Successfully added 'src' directory to Python path.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -38,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "8182dc8b",
    "metadata": {},
    "outputs": [
@@ -69,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "92cf6fa0",
    "metadata": {},
    "outputs": [],
@@ -81,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "68db1350",
    "metadata": {},
    "outputs": [
@@ -203,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "1f4f5c6a",
    "metadata": {},
    "outputs": [
@@ -212,9 +252,11 @@
      "output_type": "stream",
      "text": [
       "--- Starting Micro Feature Engineering ---\n",
-      "✅ Anomalous DAYS_EMPLOYED treated and flagged.\n",
-      "✅ Ratio and new temporal features created.\n",
-      "Training set shape after Micro Feature Engineering: (307511, 139)\n"
+      "✅ DAYS_EMPLOYED anomaly fixed and replaced with NaN.\n",
+      "✅ Created 3 core ratio features.\n",
+      "✅ TIME_INDEX converted to numerical YEAR and original index removed.\n",
+      "\n",
+      "Training set shape after revised feature engineering: (307511, 135)\n"
      ]
     }
    ],
@@ -237,133 +279,222 @@
     "# -----------------------------------------------------------\n",
     "# --- 1. Anomaly Treatment and Transformation ---\n",
     "\n",
-    "DAYS_EMPLOYED_ANOMALY_VALUE = 365243\n",
+    "# 1. Fix the DAYS_EMPLOYED Anomaly\n",
+    "# Replace the extreme positive value with NaN for proper imputation later.\n",
+    "DAYS_EMPLOYED_ANOMALY = 365243 \n",
+    "df_train_final['DAYS_EMPLOYED'].replace({DAYS_EMPLOYED_ANOMALY: np.nan})\n",
+    "df_test_final['DAYS_EMPLOYED'].replace({DAYS_EMPLOYED_ANOMALY: np.nan})\n",
+    "print(\"✅ DAYS_EMPLOYED anomaly fixed and replaced with NaN.\")\n",
     "\n",
-    "# Treat DAYS_EMPLOYED anomaly:\n",
-    "# 1. Flag the anomaly first\n",
-    "df_train_final['DAYS_EMPLOYED_ANOM'] = df_train_final['DAYS_EMPLOYED'] == DAYS_EMPLOYED_ANOMALY_VALUE\n",
-    "df_test_final['DAYS_EMPLOYED_ANOM'] = df_test_final['DAYS_EMPLOYED'] == DAYS_EMPLOYED_ANOMALY_VALUE\n",
-    "\n",
-    "# 2. Replace the anomalous value with NaN using direct assignment (CORRIGIDO)\n",
-    "# Remove inplace=True and assign back to the column name\n",
-    "df_train_final['DAYS_EMPLOYED'] = df_train_final['DAYS_EMPLOYED'].replace({DAYS_EMPLOYED_ANOMALY_VALUE: np.nan})\n",
-    "df_test_final['DAYS_EMPLOYED'] = df_test_final['DAYS_EMPLOYED'].replace({DAYS_EMPLOYED_ANOMALY_VALUE: np.nan})\n",
-    "\n",
-    "print(\"✅ Anomalous DAYS_EMPLOYED treated and flagged.\")\n",
-    "\n",
-    "# Transform DAYS_BIRTH into AGE_YEARS\n",
-    "df_train_final['AGE_YEARS'] = df_train_final['DAYS_BIRTH'] / -365\n",
-    "df_test_final['AGE_YEARS'] = df_test_final['DAYS_BIRTH'] / -365\n",
-    "\n",
-    "# --- 2. Ratio Feature Creation ---\n",
-    "\n",
-    "df_train_final['INCOME_PER_AGE'] = df_train_final['AMT_INCOME_TOTAL'] / df_train_final['AGE_YEARS']\n",
-    "df_test_final['INCOME_PER_AGE'] = df_test_final['AMT_INCOME_TOTAL'] / df_test_final['AGE_YEARS']\n",
-    "\n",
+    "# 2. Create Simple Ratio Features (Crucial for risk assessment)\n",
+    "# These are highly predictive and do not increase dimensionality.\n",
     "df_train_final['CREDIT_INCOME_RATIO'] = df_train_final['AMT_CREDIT'] / df_train_final['AMT_INCOME_TOTAL']\n",
     "df_test_final['CREDIT_INCOME_RATIO'] = df_test_final['AMT_CREDIT'] / df_test_final['AMT_INCOME_TOTAL']\n",
-    "\n",
-    "df_train_final['ANNUITY_CREDIT_RATIO'] = df_train_final['AMT_ANNUITY'] / df_train_final['AMT_CREDIT']\n",
-    "df_test_final['ANNUITY_CREDIT_RATIO'] = df_test_final['AMT_ANNUITY'] / df_test_final['AMT_CREDIT']\n",
     "\n",
     "df_train_final['ANNUITY_INCOME_RATIO'] = df_train_final['AMT_ANNUITY'] / df_train_final['AMT_INCOME_TOTAL']\n",
     "df_test_final['ANNUITY_INCOME_RATIO'] = df_test_final['AMT_ANNUITY'] / df_test_final['AMT_INCOME_TOTAL']\n",
     "\n",
-    "print(\"✅ Ratio and new temporal features created.\")\n",
-    "print(f\"Training set shape after Micro Feature Engineering: {df_train_final.shape}\")\n"
+    "df_train_final['PAYMENT_RATE'] = df_train_final['AMT_ANNUITY'] / df_train_final['AMT_CREDIT']\n",
+    "df_test_final['PAYMENT_RATE'] = df_test_final['AMT_ANNUITY'] / df_test_final['AMT_CREDIT']\n",
+    "\n",
+    "print(\"✅ Created 3 core ratio features.\")\n",
+    "\n",
+    "# Handle TIME_INDEX\n",
+    "\n",
+    "if 'TIME_INDEX' in df_train_final.columns:\n",
+    "    # Convert 'YYYY-MM' string to YYYY * 12 + MM, or simply the Year (simple numerical feature)\n",
+    "    try:\n",
+    "        df_train_final['YEAR'] = pd.to_datetime(df_train_final['TIME_INDEX']).dt.year\n",
+    "        df_test_final['YEAR'] = pd.to_datetime(df_test_final['TIME_INDEX']).dt.year\n",
+    "        \n",
+    "        # Drop the original string TIME_INDEX to prevent errors in Block 13\n",
+    "        df_train_final = df_train_final.drop(columns=['TIME_INDEX'])\n",
+    "        df_test_final = df_test_final.drop(columns=['TIME_INDEX'])\n",
+    "        \n",
+    "        print(\"✅ TIME_INDEX converted to numerical YEAR and original index removed.\")\n",
+    "    except Exception:\n",
+    "        print(\"❌ WARNING: Could not convert TIME_INDEX to datetime. Dropping TIME_INDEX.\")\n",
+    "        df_train_final = df_train_final.drop(columns=['TIME_INDEX'])\n",
+    "        df_test_final = df_test_final.drop(columns=['TIME_INDEX'])\n",
+    "\n",
+    "\n",
+    "print(f\"\\nTraining set shape after revised feature engineering: {df_train_final.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "807ae5a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Target Encoding\n",
+    "\n",
+    "from category_encoders import TargetEncoder\n",
+    "from sklearn.model_selection import KFold\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ed72a400",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Starting Feature Encoding (Block 13) ---\n",
-      "Applying Label Encoding to 3 features.\n",
-      "✅ Label Encoding completed.\n",
-      "Applying One-Hot Encoding to 13 features.\n",
-      "✅ One-Hot Encoding completed.\n",
+      "--- Starting: K-Fold Target Encoding ---\n",
+      "Found 16 categorical features to encode.\n",
+      "  > Encoded NAME_CONTRACT_TYPE with K-Fold CV.\n",
+      "  > Encoded CODE_GENDER with K-Fold CV.\n",
+      "  > Encoded FLAG_OWN_CAR with K-Fold CV.\n",
+      "  > Encoded FLAG_OWN_REALTY with K-Fold CV.\n",
+      "  > Encoded NAME_TYPE_SUITE with K-Fold CV.\n",
+      "  > Encoded NAME_INCOME_TYPE with K-Fold CV.\n",
+      "  > Encoded NAME_EDUCATION_TYPE with K-Fold CV.\n",
+      "  > Encoded NAME_FAMILY_STATUS with K-Fold CV.\n",
+      "  > Encoded NAME_HOUSING_TYPE with K-Fold CV.\n",
+      "  > Encoded OCCUPATION_TYPE with K-Fold CV.\n",
+      "  > Encoded WEEKDAY_APPR_PROCESS_START with K-Fold CV.\n",
+      "  > Encoded ORGANIZATION_TYPE with K-Fold CV.\n",
+      "  > Encoded FONDKAPREMONT_MODE with K-Fold CV.\n",
+      "  > Encoded HOUSETYPE_MODE with K-Fold CV.\n",
+      "  > Encoded WALLSMATERIAL_MODE with K-Fold CV.\n",
+      "  > Encoded EMERGENCYSTATE_MODE with K-Fold CV.\n",
       "\n",
-      "Final Train set shape: (307511, 266)\n",
-      "Final Test set shape: (48744, 265)\n",
-      "Total number of features after encoding: 266\n"
+      "✅ Target Encoding Complete. Final Feature Count:\n",
+      "  > Train Shape: (307511, 135)\n",
+      "  > Test Shape: (48744, 134)\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "# Target Encoding and Final Cleanup\n",
     "\n",
-    "print(\"--- Starting Feature Encoding (Block 13) ---\")\n",
+    "# Imports are omitted as requested, assuming TargetEncoder, KFold, pd, np, and re are imported.\n",
     "\n",
-    "# --- 1. Identify Categorical Columns ---\n",
-    "# Select columns that are still of type 'object'\n",
-    "object_cols_train = df_train_final.select_dtypes(include=['object']).columns.tolist()\n",
+    "print(\"--- Starting: K-Fold Target Encoding ---\")\n",
     "\n",
-    "# --- 2. Label Encoding (Binary Columns: 2 Unique Categories) ---\n",
+    "# 1. Identify Categorical Features\n",
+    "# Select all object (string) and category columns\n",
+    "categorical_features = df_train_final.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "\n",
-    "# Find columns with exactly two unique categories\n",
-    "le_cols = [col for col in object_cols_train if df_train_final[col].nunique() == 2]\n",
-    "print(f\"Applying Label Encoding to {len(le_cols)} features.\")\n",
+    "# Store the target column and the target values\n",
+    "TARGET_COLUMN = 'TARGET'\n",
+    "y_train = df_train_final[TARGET_COLUMN]\n",
+    "print(f\"Found {len(categorical_features)} categorical features to encode.\")\n",
     "\n",
-    "for col in le_cols:\n",
-    "    le = LabelEncoder()\n",
+    "\n",
+    "# 2. Target Encoding Setup (K-Fold CV)\n",
+    "NFOLDS = 5\n",
+    "kf = KFold(n_splits=NFOLDS, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Create empty DataFrame to store the new encoded features (using copies for safety)\n",
+    "df_train_encoded = df_train_final.copy() \n",
+    "\n",
+    "\n",
+    "# --- 3. Apply K-Fold Target Encoding to TRAIN SET ---\n",
+    "for col in categorical_features:\n",
+    "    # Create a new feature column for the encoded mean\n",
+    "    df_train_encoded[f'{col}_TARGET_ENC'] = np.nan\n",
     "    \n",
-    "    # Fit on the training set and transform both\n",
-    "    df_train_final[col] = le.fit_transform(df_train_final[col])\n",
-    "    \n",
-    "    # Transform the test set using the same fitted encoder\n",
-    "    df_test_final[col] = le.transform(df_test_final[col])\n",
+    "    for fold, (train_index, val_index) in enumerate(kf.split(df_train_final, y_train)):\n",
+    "        # Encoder is fitted on the remaining K-1 folds (train_index)\n",
+    "        encoder = TargetEncoder(cols=[col])\n",
+    "        encoder.fit(df_train_final.iloc[train_index], y_train.iloc[train_index])\n",
+    "        \n",
+    "        # Encoder is applied to the current fold (val_index)\n",
+    "        df_train_encoded.loc[val_index, f'{col}_TARGET_ENC'] = encoder.transform(df_train_final.iloc[val_index])[col]\n",
+    "        \n",
+    "    print(f\"  > Encoded {col} with K-Fold CV.\")\n",
     "\n",
-    "print(\"✅ Label Encoding completed.\")\n",
+    "# --- 4. Apply Encoding to TEST SET (FIXED: Isolate Categoricals) ---\n",
     "\n",
+    "# a. Re-fit the encoder on the *entire* original training set's categorical columns\n",
+    "final_encoder = TargetEncoder(cols=categorical_features)\n",
+    "final_encoder.fit(df_train_final[categorical_features], y_train) \n",
     "\n",
-    "# --- 3. One-Hot Encoding (Multi-Category Columns: 3+ Categories) ---\n",
+    "# b. Transform ONLY the categorical columns of the test set\n",
+    "df_test_categoricals = df_test_final[categorical_features]\n",
+    "df_test_transformed = final_encoder.transform(df_test_categoricals)\n",
     "\n",
-    "# Remaining columns (those not label encoded) need One-Hot Encoding\n",
-    "ohe_cols = [col for col in object_cols_train if col not in le_cols]\n",
-    "print(f\"Applying One-Hot Encoding to {len(ohe_cols)} features.\")\n",
+    "# c. Rename the new columns to match the train set names\n",
+    "rename_map = {col: f'{col}_TARGET_ENC' for col in categorical_features}\n",
+    "df_test_transformed.rename(columns=rename_map, inplace=True)\n",
     "\n",
-    "# Concatenate for safe One-Hot Encoding to ensure same number of columns in both sets\n",
-    "# Drop TARGET before concatenation\n",
-    "df_target = df_train_final['TARGET'] # Save the TARGET column\n",
-    "df_combined = pd.concat([df_train_final.drop('TARGET', axis=1), df_test_final], axis=0)\n",
-    "\n",
-    "# Apply get_dummies to the combined dataset\n",
-    "df_combined = pd.get_dummies(df_combined, columns=ohe_cols, dummy_na=False)\n",
-    "\n",
-    "# Re-separate the train and test sets\n",
-    "df_train_final = df_combined.iloc[:len(df_train_final), :].copy()\n",
-    "df_test_final = df_combined.iloc[len(df_train_final):, :].copy()\n",
-    "\n",
-    "# Add the TARGET column back to the training set\n",
-    "df_train_final['TARGET'] = df_target\n",
-    "\n",
-    "# Clean up any potential duplicate columns (often created after merge/concat operations)\n",
-    "df_train_final = df_train_final.loc[:,~df_train_final.columns.duplicated()]\n",
-    "df_test_final = df_test_final.loc[:,~df_test_final.columns.duplicated()]\n",
-    "\n",
-    "print(f\"✅ One-Hot Encoding completed.\")\n",
+    "# d. Drop original categorical columns from the test frame and merge the new features\n",
+    "df_test_final = df_test_final.drop(columns=categorical_features)\n",
+    "df_test_final = pd.merge(\n",
+    "    df_test_final, \n",
+    "    df_test_transformed, \n",
+    "    left_index=True, \n",
+    "    right_index=True, \n",
+    "    how='left'\n",
+    ")\n",
     "\n",
     "\n",
-    "# --- 4. Final Verification and Preparation for Modeling ---\n",
-    "print(f\"\\nFinal Train set shape: {df_train_final.shape}\")\n",
-    "print(f\"Final Test set shape: {df_test_final.shape}\")\n",
+    "# 5. Drop Original Categorical Columns from TRAIN SET\n",
+    "df_train_final = df_train_encoded.drop(columns=categorical_features)\n",
     "\n",
-    "print(f\"Total number of features after encoding: {df_train_final.shape[1]}\")"
+    "\n",
+    "# 6. Final Cleanup: LightGBM Name Safety\n",
+    "# Function to remove problematic characters that break LightGBM/XGBoost (like [,] <, etc.)\n",
+    "def clean_names(df):\n",
+    "    cols = df.columns\n",
+    "    new_cols = []\n",
+    "    for col in cols:\n",
+    "        new_col = re.sub(r'[^A-Za-z0-9_]+', '', col)\n",
+    "        new_cols.append(new_col)\n",
+    "    df.columns = new_cols\n",
+    "    return df\n",
+    "\n",
+    "df_train_final = clean_names(df_train_final)\n",
+    "df_test_final = clean_names(df_test_final)\n",
+    "\n",
+    "print(f\"\\n✅ Target Encoding Complete. Final Feature Count:\")\n",
+    "print(f\"  > Train Shape: {df_train_final.shape}\")\n",
+    "print(f\"  > Test Shape: {df_test_final.shape}\")\n",
+    "\n",
+    "# Optional: You can now save the final DataFrames as Parquet files here \n",
+    "# before proceeding to Block 15 (Model Training)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2caf6690",
+   "execution_count": 9,
+   "id": "1aa10bc2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Saving Final Processed DataFrames (Parquet Format) ---\n",
+      "✅ Final Train set saved to: /content/drive/MyDrive/Project_01/data/processed/train_final_encoded.parquet\n",
+      "✅ Final Test set saved to: /content/drive/MyDrive/Project_01/data/processed/test_final_encoded.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n--- Saving Final Processed DataFrames (Parquet Format) ---\")\n",
+    "\n",
+    "# Define the save paths using the 'cfg' instance (assuming cfg.DATA_PROCESSED_DIR exists)\n",
+    "FINAL_TRAIN_FILE = os.path.join(cfg.DATA_PROCESSED_DIR, 'train_final_encoded.parquet')\n",
+    "FINAL_TEST_FILE = os.path.join(cfg.DATA_PROCESSED_DIR, 'test_final_encoded.parquet')\n",
+    "\n",
+    "\n",
+    "# 1. Save the Training DataFrame\n",
+    "# Use index=False as 'TIME_INDEX' should now be a regular column after Block 13\n",
+    "df_train_final.to_parquet(FINAL_TRAIN_FILE, index=False)\n",
+    "print(f\"✅ Final Train set saved to: {FINAL_TRAIN_FILE}\")\n",
+    "\n",
+    "# 2. Save the Test DataFrame\n",
+    "df_test_final.to_parquet(FINAL_TEST_FILE, index=False)\n",
+    "print(f\"✅ Final Test set saved to: {FINAL_TEST_FILE}\")"
+   ]
   }
  ],
  "metadata": {
